# mai_system_design

lab1/: readme.md  workspace.dsl
lab2/: .dockerignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  openapi.yaml
lab2/cmake/: DownloadUserver.cmake  get_cpm.cmake
lab2/libs/auth/include/auth/: jwt.hpp
lab2/services/booking_service/: main.cpp
lab2/services/booking_service/configs/: static_config.yaml
lab2/services/booking_service/src/codec/: parse.hpp  presenter.hpp
lab2/services/booking_service/src/handlers/: handlers.cpp  handlers.hpp  health_handler.hpp
lab2/services/hotel_service/: main.cpp
lab2/services/hotel_service/configs/: static_config.yaml
lab2/services/user_service/: main.cpp
lab2/services/user_service/configs/: static_config.yaml
lab2/tests/: smoke.sh
lab3/: .gitignore  CMakeLists.txt  Dockerfile  data.sql  docker-compose.yaml  openapi.yaml  optimization.md  queries.sql  readme.md  schema.sql
lab3/libs/auth/include/auth/: bearer_jwt_middleware.hpp  password.hpp  request_context.hpp  undef_macros.hpp
lab3/libs/auth/src/: bearer_jwt_middleware.cpp  jwt.cpp  password.cpp
lab3/libs/http_support/include/hotel_booking/http/: errors.hpp  principal.hpp
lab3/services/booking_service/: main.cpp
lab3/services/booking_service/configs/: static_config.yaml
lab3/services/booking_service/src/codec/: booking_errors.hpp  fields.hpp  parse.cpp  presenter.cpp
lab3/services/booking_service/src/handlers/: handlers.cpp  handlers.hpp  health_handler.cpp
lab3/services/booking_service/src/integration/: downstream.cpp  downstream.hpp  url_paths.cpp  url_paths.hpp
lab3/services/booking_service/src/store/: store.cpp  store.hpp
lab3/services/hotel_service/: main.cpp
lab3/services/hotel_service/configs/: config_vars.yaml  static_config.yaml
lab3/services/hotel_service/src/codec/: parse.cpp  parse.hpp  presenter.cpp  presenter.hpp
lab3/services/hotel_service/src/handlers/: handlers.cpp  handlers.hpp
lab3/services/hotel_service/src/store/: store.cpp  store.hpp
lab3/services/user_service/: main.cpp
lab3/services/user_service/configs/: static_config.yaml
lab3/services/user_service/src/codec/: fields.hpp  parse.cpp  presenter.cpp  presenter.hpp  user_errors.hpp
lab3/services/user_service/src/handlers/: handlers.cpp  handlers.hpp  health_handler.cpp  health_handler.hpp
lab3/services/user_service/src/store/: store.cpp  store.hpp
lab3/tests/: smoke.sh
(+18 files in other folders)
